@@ -22,7 +22,7 @@
 #    Alasdair Allan (aa@astro.ex.ac.uk)
 
 #  Revision:
-#     $Id: user_agent.pl,v 1.29 2007/04/04 15:44:48 aa Exp $
+#     $Id: user_agent.pl,v 1.30 2007/04/20 16:15:53 aa Exp $
 
 #  Copyright:
 #     Copyright (C) 2003 University of Exeter. All Rights Reserved.
@@ -65,7 +65,7 @@ itself.
 
 =head1 REVISION
 
-$Id: user_agent.pl,v 1.29 2007/04/04 15:44:48 aa Exp $
+$Id: user_agent.pl,v 1.30 2007/04/20 16:15:53 aa Exp $
 
 =head1 AUTHORS
 
@@ -82,7 +82,7 @@ Copyright (C) 2003 University of Exeter. All Rights Reserved.
 #  Version number - do this before anything else so that we dont have to 
 #  wait for all the modules to load - very quick
 BEGIN {
-  $VERSION = sprintf "%d.%d", q$Revision: 1.29 $ =~ /(\d+)\.(\d+)/;
+  $VERSION = sprintf "%d.%d", q$Revision: 1.30 $ =~ /(\d+)\.(\d+)/;
  
   #  Check for version number request - do this before real options handling
   foreach (@ARGV) {
@@ -422,10 +422,13 @@ $ua->set_ua( $lwp );
 #$config->set_option( "nodes.Exeter", "dn2.astro.ex.ac.uk:8080" );
 #$config->set_option( "nodes.LJM", "150.204.240.111:8080" );
 #$config->set_option( "nodes.UKIRT", "estar.ukirt.jach.hawaii.edu:8080" );
-$config->set_option( "nodes.LTproxy", "estar3.astro.ex.ac.uk:8078" );
-#$config->set_option( "nodes.LT", "161.72.57.3:8080/axis/services/NodeAgent" );
-$config->set_option( "nodes.FTNproxy", "estar3.astro.ex.ac.uk:8077" );
-$config->set_option( "nodes.FTSproxy", "estar3.astro.ex.ac.uk:8079" );
+#$config->set_option( "nodes.LTproxy", "estar3.astro.ex.ac.uk:8078" );
+$config->set_option( "nodes.LT", "161.72.57.3:8080/axis/services/NodeAgent" );
+#$config->set_option( "nodes.FTNproxy", "estar3.astro.ex.ac.uk:8077" );
+#$config->set_option( "nodes.FTSproxy", "estar3.astro.ex.ac.uk:8079" );
+$config->set_option( "nodes.FTS", "150.203.153.202:8080/axis/services/NodeAgent" );
+$config->set_option( "nodes.FTN", "132.160.98.239:8080/axis/services/NodeAgent" );
+
 #$config->set_option( "nodes.Test", "127.0.0.1:8080" );
 $status = $config->write_option( );
 
@@ -605,6 +608,9 @@ sub kill_agent {
 # T I M E   A T   T H E   B A R  -------------------------------------------
 
 # $Log: user_agent.pl,v $
+# Revision 1.30  2007/04/20 16:15:53  aa
+# Fixes for new Java native Node Agents at the proxy machines
+#
 # Revision 1.29  2007/04/04 15:44:48  aa
 # Added all_telescopes() method
 #
