@@ -1,8 +1,8 @@
 #! /bin/tcsh
 
-source /work/estar/third_generation/etc/user_agent.csh -user aa -mail 'aa@astro.ex.ac.uk' >& ~estar/logs/exo/user.`date -Iseconds` &
-source /work/estar/third_generation/etc/node_agent.csh -name LT -soap 8078 -tcp 2048 -host '161.72.57.3' -port 8081 >& ~estar/logs/exo/node.LT.`date -Iseconds` &
-source /work/estar/third_generation/etc/node_agent.csh -name FTN -soap 8077 -tcp 2047 -host '132.160.98.239' -port 8081 >& ~estar/logs/exo/node.FTN.`date -Iseconds` &
-source /work/estar/third_generation/etc/node_agent.csh -name FTS -soap 8079 -tcp 2049 -host '150.203.153.202' -port 8081 >& ~estar/logs/exo/node.FTS.`date -Iseconds` &
+source /work/estar/third_generation/etc/user_agent.csh -user kdh1 -mail 'aa@astro.ex.ac.uk' >& ~estar/logs/exo/user.`date -Iseconds` &
+#source /work/estar/third_generation/etc/node_agent.csh -name LT -soap 8078 -tcp 2048 -host '161.72.57.3' -port 8081 >& ~estar/logs/exo/node.LT.`date -Iseconds` &
+#source /work/estar/third_generation/etc/node_agent.csh -name FTN -soap 8077 -tcp 2047 -host '132.160.98.239' -port 8081 >& ~estar/logs/exo/node.FTN.`date -Iseconds` &
+#source /work/estar/third_generation/etc/node_agent.csh -name FTS -soap 8079 -tcp 2049 -host '150.203.153.202' -port 8081 >& ~estar/logs/exo/node.FTS.`date -Iseconds` &
 
-/software/perl-5.8.6/bin/perl /work/estar/third_generation/bin/ogle_client.pl -user aa -pass wibble >& ~estar/logs/voevent/ogle_ews.`date -Iseconds` &
+/software/perl-5.8.6/bin/perl /work/estar/third_generation/bin/ogle_client.pl -user kdh1 -pass EXOfollowup -project exoplanet >& ~estar/logs/voevent/ogle_ews.`date -Iseconds` &
