@@ -120,9 +120,11 @@
 	my $node = $object->node();
         my ($node_name, $score_reply) = $object->highest_score();
 	$node = "FTN" if $node eq "estar3.astro.ex.ac.uk:8077";
+	$node = "FTN Proxy" if $node eq "132.160.98.239:8080/axis/services/NodeAgent";
 	$node = "LT" if $node eq "estar3.astro.ex.ac.uk:8078";
 	$node = "LT Proxy" if $node eq "161.72.57.3:8080/axis/services/NodeAgent";
 	$node = "FTS" if $node eq "estar3.astro.ex.ac.uk:8079";  
+	$node = "FTS Proxy" if $node eq "150.203.153.202:8080/axis/services/NodeAgent";
         my $score;
         eval { $score = $score_reply->score() if defined $score_reply; };
         if ( $@ ) {
